cmake_minimum_required(VERSION 3.10)
project(space_invaders)
set(CMAKE_CXX_STANDARD 17)
add_executable(space_invaders main.cpp)
find_package(GLEW REQUIRED)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
target_link_libraries(space_invaders GLEW::GLEW)
target_link_libraries(space_invaders OpenGL::GL)
target_link_libraries(space_invaders glfw)